DDW-518 - Tile view of stake pools ranked by rewards - fixes for mainnet

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -41,8 +41,12 @@
   position: absolute;
   right: 20px;
 
-  &.inputExtrasSearch {
+  &.withGridRewardsView {
     right: 145px;
+  }
+
+  &.inputExtrasSearch {
+    right: 110px;
   }
 }
 
