[DDW-518] Introduce rewards grid view config variable

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -102,6 +102,7 @@
   button {
     border-radius: 3px;
     color: var(--theme-about-window-icon-close-button-color);
+    cursor: pointer;
     height: 28px;
     margin: 0 2px;
     width: 28px;
