--- a/source/renderer/app/components/wallet/transactions/FilterDialog.scss
+++ b/source/renderer/app/components/wallet/transactions/FilterDialog.scss
@@ -2,25 +2,11 @@
   background-color: var(--theme-transactions-filter-modal-bg-color);
   flex: initial;
   font-family: var(--font-regular);
-  margin: 0 -20px -10px;
+  padding: 20px 10px 10px 10px;
   position: relative;
-  width: 400px;
+  width: 420px;
 
   :global {
-    .Dialog_contentWrapper {
-      overflow-x: visible;
-      overflow-y: visible;
-
-      .Dialog_content {
-        margin-bottom: 0;
-        overflow: visible;
-      }
-    }
-
-    .Dialog_actions {
-      display: none;
-    }
-
     .TinySelect_component {
       .SimpleBubble_root {
         .SimpleBubble_bubble {
@@ -172,7 +158,6 @@
     }
 
     .body {
-      align-items: center;
       color: var(--theme-dialog-text-color);
       display: flex;
       margin-top: 6px;
@@ -225,9 +210,7 @@
         }
       }
       .body {
-        .dateRangeInput {
-          margin-right: 10px;
-        }
+        justify-content: space-between;
         :global {
           .TinyInput_component .SimpleFormField_label {
             color: var(--rp-input-placeholder-color);
