--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -28,7 +28,17 @@
   input {
     border-radius: 4px;
     height: 50px;
-    padding: 0 150px 0 55px;
+    padding: 0 68px 0 55px;
+  }
+
+  &.inputExtrasSearch {
+    input {
+      padding-right: 160px;
+    }
+
+    &.withGridRewardsView input {
+      padding-right: 193px;
+    }
   }
 }
 
@@ -37,16 +47,15 @@
   display: flex;
   height: 48px;
   line-height: 48px;
-  padding-left: 20px;
   position: absolute;
   right: 20px;
 
-  &.withGridRewardsView {
-    right: 145px !important;
-  }
-
   &.inputExtrasSearch {
     right: 110px;
+
+    &.withGridRewardsView {
+      right: 145px;
+    }
   }
 }
 
