[DDW-518] Tile view of stake pools ranked by rewards (#2426)
* DDW-518 - Tile view of stake pools ranked by rewards - updating changelog

* DDW-518 - Tile view of stake pools ranked by rewards - updating changelog

* DDW-518 - Tile view of stake pools ranked by rewards - adding tile view rewards button to search component

* DDW-518 - Tile view of stake pools ranked by rewards - adding sorting by rewards on stake pools

* DDW-518 - Tile view of stake pools ranked by rewards - adding rewards label to stake pool tiles

* DDW-518 - Tile view of stake pools ranked by rewards - adding rewards label to stake pool tiles

* DDW-518 - Tile view of stake pools ranked by rewards - adding tooltips

* DDW-518 - Tile view of stake pools ranked by rewards - adding tooltips

* DDW-518 - Tile view of stake pools ranked by rewards - adding tooltips

* DDW-518 - Tile view of stake pools ranked by rewards - adding tooltips jp translations

* [DDW-518] Updates CHANGELOG

* DDW-518 - Tile view of stake pools ranked by rewards - ada symbol color change

* DDW-518 - Tile view of stake pools ranked by rewards - disabling ranked view for mainnet

* DDW-518 - Tile view of stake pools ranked by rewards - fixes for mainnet

* DDW-518 - Tile view of stake pools ranked by rewards - fixes for no dash

* DDW-518 - Tile view of stake pools ranked by rewards - isMainnet flag update

* DDW-518 - Tile view of stake pools ranked by rewards - linter

* DDW-570 - Tile view of stake pools ranked by rewards - flow fixes

* DDW-570 - Tile view of stake pools ranked by rewards - flow fixes

* [DDW-518] Introduce rewards grid view config variable

* [DDW-518] Fixes issues

* [DDW-518] Ensure we display rewards with 5 digits

* [DDW-518] Fix clear button issues

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -28,7 +28,17 @@
   input {
     border-radius: 4px;
     height: 50px;
-    padding: 0 150px 0 55px;
+    padding: 0 68px 0 55px;
+  }
+
+  &.inputExtrasSearch {
+    input {
+      padding-right: 160px;
+    }
+
+    &.withGridRewardsView input {
+      padding-right: 193px;
+    }
   }
 }
 
@@ -37,12 +47,15 @@
   display: flex;
   height: 48px;
   line-height: 48px;
-  padding-left: 20px;
   position: absolute;
   right: 20px;
 
   &.inputExtrasSearch {
     right: 110px;
+
+    &.withGridRewardsView {
+      right: 145px;
+    }
   }
 }
 
@@ -98,6 +111,7 @@
   button {
     border-radius: 3px;
     color: var(--theme-about-window-icon-close-button-color);
+    cursor: pointer;
     height: 28px;
     margin: 0 2px;
     width: 28px;
@@ -133,6 +147,12 @@
   }
 
   .gridView {
+    svg {
+      width: 15px !important;
+    }
+  }
+
+  .gridRewardsView {
     svg {
       width: 15px !important;
     }
