--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -37,6 +37,30 @@
     }
   }
 
+  .rewards {
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    line-height: 1.57;
+    padding: 3px 0;
+    position: relative;
+    text-align: center;
+
+    .adaIcon {
+      svg {
+        height: 11px;
+        margin-left: 3px;
+        width: 10px;
+
+        & > g {
+          & > g {
+            stroke: var(--theme-staking-wallet-row-ticker-ada-icon-fill-color);
+          }
+        }
+      }
+    }
+  }
+
   .noDataDash {
     align-items: center;
     display: flex;
