--- a/source/renderer/app/components/wallet/send-form/WalletSendAssetsConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/send-form/WalletSendAssetsConfirmationDialog.scss
@@ -165,9 +165,78 @@
       h3 {
         display: inline-flex;
         font-family: var(--font-light);
+
         > span {
           margin-right: 12px;
+          white-space: nowrap;
         }
+      }
+
+      .unformattedAmountLine {
+        border-bottom: 1px solid
+          var(--theme-transactions-list-item-details-color);
+        border-bottom-left-radius: 2px;
+        border-left: 1px solid var(--theme-transactions-list-item-details-color);
+        flex-grow: 1;
+        height: 12px;
+        margin: 0 8px 0 4px;
+        opacity: 0.3;
+      }
+
+      .unformattedAmountLabel {
+        align-items: center;
+        display: flex;
+        font-family: var(--font-regular);
+        font-size: 11px;
+        line-height: 21px;
+
+        .questionMark {
+          height: 10px;
+          margin: 1px 1px 0 2px;
+          width: 10px;
+
+          :global {
+            .SVGInline {
+              align-items: center;
+              display: flex;
+              height: 100%;
+              justify-content: center;
+              width: 100%;
+
+              svg {
+                height: 10px;
+                width: 10px;
+
+                path {
+                  fill: var(
+                    --theme-staking-stake-pool-tooltip-table-title-color
+                  );
+                  opacity: 0.3;
+                }
+              }
+            }
+          }
+
+          &:hover {
+            :global {
+              .SVGInline {
+                svg {
+                  path {
+                    opacity: 0.5;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .unformattedAmount {
+        font-family: var(--font-bold);
+        font-size: 11px;
+        line-height: 21px;
+        padding-left: 4px;
+        padding-right: 8px;
       }
     }
   }
