[DDW-416] Add backdrop blur to some overlays/dialogs (#2431)
* [DDW-416] Add backdrop blur to some overlays/dialogs

* [DDW-416] Fix z-index to keep staking slider in bg

* [DDW-416] Simplify overlay backdrop mixin

* [DDW-416] Refactor tx filter dialog to pop over

This was necessary because we dont want a backdrop filter to be applied when opening the transaction filter dialog. Since it is not (easily) possible to change the modal backdrop just for a single case, this was the cleaner solution.

* [DDW-416] Add changelog

* [DDW-416] Close tx filter dialog on submit

* [DDW-416] Fix lint issue

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/notifications/ExperimentalDataOverlay.scss
+++ b/source/renderer/app/components/notifications/ExperimentalDataOverlay.scss
@@ -1,9 +1,12 @@
+@import '../../themes/mixins/overlay-backdrop';
+
 .component {
   background-color: var(--theme-experimental-data-overlay-background-color);
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 3;
+  z-index: 11;
+  @include overlay-backrop;
 
   .content {
     align-items: center;
