--- a/source/renderer/app/components/wallet/send-form/WalletSendAssetsConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/send-form/WalletSendAssetsConfirmationDialog.scss
@@ -236,7 +236,7 @@
         font-size: 11px;
         line-height: 21px;
         padding-left: 4px;
-        padding-right: 8px;
+        padding-right: 9px;
       }
     }
   }
@@ -262,8 +262,8 @@
     }
 
     .amount {
+      font-family: var(--font-bold);
       font-size: 11px;
-      font-weight: bold;
       line-height: 1.36;
       margin-left: initial;
     }
