--- a/source/renderer/app/components/wallet/receive/WalletReceiveDialog.scss
+++ b/source/renderer/app/components/wallet/receive/WalletReceiveDialog.scss
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+
   canvas {
     border: 4px solid var(--theme-receive-qr-code-background-color);
     box-sizing: content-box;
   }
 }
+
 .address {
   font-family: var(--font-mono);
   font-size: 19px;
@@ -15,24 +17,32 @@
   text-align: center;
   word-wrap: break-word;
 }
+
 .copyAddress {
   display: block;
   margin-bottom: 20px;
+  opacity: 0.7;
   text-align: center;
   width: 100%;
+
+  &:hover {
+    opacity: 1;
+  }
 }
+
 .copyAddressLabel {
   color: var(--theme-label-button-color);
   cursor: pointer;
   font-family: var(--font-regular);
   font-size: 14px;
-  opacity: 0.5;
   padding-left: 6px;
 }
+
 .copyIcon {
   cursor: pointer;
   margin-left: 4px;
   object-fit: contain;
+
   & > svg {
     height: 12px;
     width: 10px;
@@ -41,6 +51,7 @@
     }
   }
 }
+
 .noteInput textarea {
   background: transparent;
   font-family: var(--font-regular);
