[DDW-594] Add display of asset name in ASCII

--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -148,7 +148,12 @@
   .assetItem {
     cursor: pointer;
     display: inline-flex;
+    flex-direction: column;
     width: 100%;
+
+    .assetASCIIName {
+      opacity: 0.5;
+    }
   }
 
   .copyIcon {
