--- a/source/renderer/app/components/widgets/ProgressBarLarge.scss
+++ b/source/renderer/app/components/widgets/ProgressBarLarge.scss
@@ -26,9 +26,9 @@
   width: 100%;
 
   &.loading {
-    animation: animatedStripesBackground 6s linear infinite;
+    animation: animatedStripesBackground 2s linear infinite;
     background: repeating-linear-gradient(
-      -62deg,
+      -63deg,
       var(--theme-staking-progress-stripe-dark-1-background-color),
       var(--theme-staking-progress-stripe-dark-1-background-color) 10px,
       var(--theme-staking-progress-stripe-dark-2-background-color) 10px,
@@ -45,15 +45,16 @@
   height: 100%;
   justify-content: flex-end;
   transition: width 0.24s;
+  background-size: 23px 24px !important;
 
   &:not(.isComplete) {
-    animation: animatedStripesBackground 6s linear infinite;
+    animation: animatedStripesBackground 2s linear infinite;
   }
 }
 
 .progressDarkMode {
   background: repeating-linear-gradient(
-    -62deg,
+    -63deg,
     var(--theme-progress-bar-large-progress-dark-stripe1),
     var(--theme-progress-bar-large-progress-dark-stripe1) 10px,
     var(--theme-progress-bar-large-progress-dark-stripe2) 10px,
@@ -63,7 +64,7 @@
 
 .progressLightMode {
   background: repeating-linear-gradient(
-    -62deg,
+    -63deg,
     var(--theme-staking-progress-stripe-dark-1-background-color),
     var(--theme-staking-progress-stripe-dark-1-background-color) 10px,
     var(--theme-staking-progress-stripe-dark-2-background-color) 10px,
@@ -85,6 +86,6 @@
     background-position-x: 0;
   }
   100% {
-    background-position-x: 182px;
+    background-position-x: 67px;
   }
 }
