[DDW-600] Fix animation in the voting screen

--- a/source/renderer/app/components/widgets/ProgressBarLarge.scss
+++ b/source/renderer/app/components/widgets/ProgressBarLarge.scss
@@ -34,6 +34,7 @@
       var(--theme-staking-progress-stripe-dark-2-background-color) 10px,
       var(--theme-staking-progress-stripe-dark-2-background-color) 20px
     );
+    background-size: 23px 24px;
     opacity: 0.3;
   }
 }
