[DDW-609] Basic fireworks fx

--- a/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
+++ b/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
@@ -2,6 +2,9 @@
   overflow: visible;
   position: absolute;
   right: 100px;
+  &.isFullyDecentralized {
+    right: 162px;
+  }
   &:hover {
     .info {
       opacity: 1;
