[DDW-600] Progress bar animation and positioning issues (#2458)
* [DDW-600] Fixes glitch in the progress bar

* [DDW-600] CHANGELOG

* [DDW-600] Fixes glitch in the progress bar

* [DDW-600] Fine tunning progress bar animation

* [DDW-600] Fixes Progress Bar misaligning issue on Linux

* [DDW-600] Removes redundant classname

* [DDW-600] Runs stylelint:fix, Fix voting transaction fee calculation

* [DDW-600] Fix animation in the voting screen

* [DDW-600] Correct CHANGELOG entry position

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/widgets/ProgressBarLarge.scss
+++ b/source/renderer/app/components/widgets/ProgressBarLarge.scss
@@ -34,12 +34,14 @@
       var(--theme-staking-progress-stripe-dark-2-background-color) 10px,
       var(--theme-staking-progress-stripe-dark-2-background-color) 20px
     );
+    background-size: 23px 24px;
     opacity: 0.3;
   }
 }
 
 .progress {
   align-items: center;
+  background-size: 23px 24px !important;
   border-radius: 5px;
   display: flex;
   height: 100%;
@@ -85,6 +87,6 @@
     background-position-x: 0;
   }
   100% {
-    background-position-x: 67px;
+    background-position-x: 68px;
   }
 }
