[DDW-609] Attempt to better control the fireworks fx

--- a/source/renderer/app/components/staking/info/StakingInfo.scss
+++ b/source/renderer/app/components/staking/info/StakingInfo.scss
@@ -74,3 +74,14 @@
   color: var(--theme-staking-progress-label-light);
   transform: translateX(-8px);
 }
+
+:global {
+  #root {
+    position: relative;
+    canvas {
+      position: absolute;
+      top: 0;
+      z-index: 9;
+    }
+  }
+}
