[DDW-257] Set up Shelley cardano-node selfnode environment (#2462)
* selfnode: switch to shelley-test-cluster

* [DDW-257] Selfnode setup

* [DDW-257] Fix build issues

* shelley-test-cluster: change path to projects.hsPkgs

* Fix yarn.lock

* Fix storybook

* [DDW-257] Fix selfnode bin names

* [DDW-257] Fix default SMASH URL handling

* [DDW-257] Genesis file update

* [DDW-257] Adds confirmation dialog when exiting selfnode

* [DDW-257] Remove unused cardano-wallet files

* [DDW-257] Fix local-cluster PID handling

* [DDW-257] Minor code improvements

* [DDW-257] Extract selfnode launcher code into a separate file

* [DDW-257] Move logging into CardanoNode

* [DDW-257] Fix wallet importers

* [DDW-257] Improve wallet importers

* [DDW-257] Updates README

* [DDW-257] Updates README

* [DDW-257] Updates README

* [DDW-257] Remove IOHK SMASH url from selfnode options

* [DDW-257] Improves wallet importer

* [DDW-257] README update

* [DDW-257] Integrate mock token metadata server into selfnode

* [DDW-257] Implements KEEP_LOCAL_CLUSTER_RUNNING env variable

* [DDW-257] Exposes eras on getNetworkParameters API response

* [DDW-257] Updates cardano-wallet and mary mnemonics

* [DDW-257] Convert all quantities to string before parsing it into BigNumber

* [DDW-257] Bump iohk-nix, Improve code

Co-authored-by: Samuel Leathers <samuel.leathers@iohk.io>

--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -1,5 +1,4 @@
 @import '../../../themes/mixins/link';
-@import '../../../themes/mixins/error-message';
 @import '../../../themes/mixins/animations';
 
 .component {
@@ -207,18 +206,6 @@
     }
   }
 
-  .transactionFeeRow,
-  .depositRow {
-    .amount {
-      color: var(--theme-transactions-list-item-highlight-color);
-
-      .currency {
-        font-family: var(--font-light);
-        margin-left: 5px;
-      }
-    }
-  }
-
   span {
     font-family: var(--font-light);
     font-size: 15px;
@@ -333,8 +320,9 @@
   }
 }
 
-.transactionFeeValue {
-  @include error-message;
+.transactionFeeValue,
+.depositValue {
+  color: var(--theme-transactions-list-item-highlight-color);
   font-family: var(--font-medium);
 
   span {
