--- a/source/renderer/app/components/staking/stake-pools/FilterPopOver.scss
+++ b/source/renderer/app/components/staking/stake-pools/FilterPopOver.scss
@@ -73,10 +73,58 @@
       display: flex;
       flex-direction: column;
       margin: 20px 10px 0;
+
+      :global {
+        .TinyCheckbox_component {
+          margin-bottom: 17px;
+        }
+      }
     }
 
     .action {
-      margin-top: 24px;
+      margin-top: 8px;
+    }
+  }
+}
+
+.triggerButton {
+  margin-left: 7px;
+  margin-right: 11px;
+
+  .actionButton {
+    border-radius: 2px;
+    display: flex;
+    height: 28px;
+    margin: 0;
+    padding: 0 12px;
+
+    .actionLabel {
+      color: var(--theme-staking-stake-pools-filter-button-color);
+      font-family: var(--font-regular);
+      font-size: 14px;
+      line-height: 1.36;
+      margin-right: 12px;
+
+      .numberIndicator {
+        margin-left: 5px;
+      }
+    }
+
+    .filterIcon {
+      align-items: center;
+      display: flex;
+      height: 11px;
+      justify-content: center;
+      width: 11px;
+
+      svg {
+        height: 11px;
+        width: 11px;
+      }
+
+      g {
+        stroke: var(--theme-staking-stake-pools-filter-button-color);
+      }
     }
   }
 }
