--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
@@ -46,7 +46,7 @@
 
         & > span {
           display: block;
-          margin-right: 98px;
+          margin-right: 86px;
           overflow: visible;
           width: 28px;
 
@@ -73,9 +73,6 @@
     display: flex;
     height: 28px;
     justify-content: center;
-  }
-
-  .imageButton {
     width: 28px;
 
     :global {
@@ -108,11 +105,29 @@
     }
   }
 
+  .revealButton {
+    :global {
+      .SVGInline {
+        height: 18px;
+        width: 14px;
+      }
+    }
+  }
+
+  .hideButton {
+    :global {
+      .SVGInline {
+        height: 16px;
+        width: 14px;
+      }
+    }
+  }
+
   .addons {
     align-items: center;
     display: flex;
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 43px;
 
     .imageButtonContainer {
