--- a/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
+++ b/source/renderer/app/components/widgets/NodeSyncStatusIcon.scss
@@ -2,7 +2,7 @@
   overflow: visible;
   position: absolute;
   right: 100px;
-  &.isFullyDecentralized {
+  &.hasTadaIcon {
     right: 162px;
   }
   &:hover {
