[DDW-544] Refactor stake pools list to react-virtualized

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
@@ -18,3 +18,9 @@
   grid-template-columns: repeat(auto-fill, 80px);
   justify-content: space-between;
 }
+
+.list {
+  &:focus {
+    outline: 0;
+  }
+}
