[DDW-609] Tada button animation teak

--- a/source/renderer/app/components/widgets/TadaButton.scss
+++ b/source/renderer/app/components/widgets/TadaButton.scss
@@ -3,6 +3,7 @@
   font-size: 19px;
   position: absolute;
   right: 104px;
+  transform-origin: bottom left;
   &.animate {
     animation: animation 0.5s cubic-bezier(0.7, 0, 0.24, 1.01) infinite;
   }
