--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
@@ -152,12 +152,20 @@
     }
   }
 
-  .retiringPoolFooter {
+  .poolFooter {
     color: var(--theme-staking-stake-pool-retirement-background-color);
     font-family: var(--font-medium);
     font-size: 16px;
     line-height: 1.38;
     margin: 20px 0;
-    text-align: center;
+    text-align: left;
+
+    .poolFooterContent {
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 }
