[DDW-435] Show private, retiring and high profit margin pool warnings on delegation confirmm step as well

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
@@ -76,6 +76,23 @@
     text-align: center;
   }
 
+  .poolFooter {
+    color: var(--theme-staking-stake-pool-retirement-background-color);
+    font-family: var(--font-medium);
+    font-size: 16px;
+    line-height: 1.38;
+    margin: 20px 0;
+    text-align: left;
+
+    .poolFooterContent {
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
   :global {
     .LoadingSpinner_component {
       .LoadingSpinner_icon {
