[DDW-435] Update styles of filter popup on stake pools

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -347,6 +347,7 @@
   font-size: 14px;
   line-height: 1.36;
   margin-bottom: 1px;
+  margin-right: 8px;
   opacity: 0.6;
   vertical-align: middle;
 }
@@ -359,8 +360,7 @@
   color: var(--theme-staking-stake-pool-tooltip-retirement-text-color);
   display: inline-block;
   font-size: 10px;
-  margin-bottom: 9px;
-  margin-left: 8px;
+  margin-bottom: 1px;
   padding: 3px 9px;
   vertical-align: middle;
 }
