[DDW-609] Tada icon

--- a/source/renderer/app/components/widgets/TadaButton.scss
+++ b/source/renderer/app/components/widgets/TadaButton.scss
@@ -2,10 +2,16 @@
   cursor: pointer;
   font-size: 19px;
   position: absolute;
-  right: 104px;
+  right: 94px;
   transform-origin: bottom left;
   &.animate {
     animation: animation 0.5s cubic-bezier(0.7, 0, 0.24, 1.01) infinite;
+  }
+}
+.icon {
+  svg {
+    height: 32px;
+    width: 32px;
   }
 }
 
