--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
@@ -9,12 +9,14 @@
         .SimpleFormField_label {
           pointer-events: none;
         }
+
         .SimpleInput_input {
           color: var(--rp-input-text-color-disabled);
           pointer-events: none;
         }
       }
     }
+
     &.valueShown {
       :global {
         .SimpleInput_input {
@@ -22,11 +24,12 @@
         }
       }
     }
+
     &.withBigToggleButton {
       :global {
         .SimpleFormField_inputWrapper {
           & > span {
-            margin-right: 140px;
+            margin-right: 86px;
 
             .SimpleInput_input {
               width: calc(100% - 213px);
@@ -46,7 +49,7 @@
 
         & > span {
           display: block;
-          margin-right: 98px;
+          margin-right: 86px;
           overflow: visible;
           width: 28px;
 
@@ -73,10 +76,11 @@
     display: flex;
     height: 28px;
     justify-content: center;
-  }
-
-  .imageButton {
     width: 28px;
+
+    &:focus {
+      box-shadow: none !important;
+    }
 
     :global {
       .SVGInline {
@@ -108,11 +112,29 @@
     }
   }
 
+  .revealButton {
+    :global {
+      .SVGInline {
+        height: 18px;
+        width: 14px;
+      }
+    }
+  }
+
+  .hideButton {
+    :global {
+      .SVGInline {
+        height: 16px;
+        width: 14px;
+      }
+    }
+  }
+
   .addons {
     align-items: center;
     display: flex;
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 43px;
 
     .imageButtonContainer {
