--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -206,6 +206,13 @@
 
         :global .LoadingSpinner_component.LoadingSpinner_medium {
           margin: 10px auto !important;
+
+          .LoadingSpinner_icon
+          svg
+          path {
+            fill: var(--theme-loading-spinner-color);
+            opacity: 0.3;
+          }
         }
       }
 
